--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -1,1 +1,5 @@
-<p>elements-home works!</p>
+<app-divider>
+  Placeholder Text!
+</app-divider>
+<app-placeholder></app-placeholder>
+<app-segment></app-segment>
