adding more reusable components, ng-content, ng-container

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,12 @@
       <a routerLink="elements" routerLinkActive="is-active" class="navbar-item">
         Elements
       </a>
+      <a routerLink="views" routerLinkActive="is-active" class="navbar-item">
+        Views
+      </a>
+      <a routerLink="modules" routerLinkActive="is-active" class="navbar-item">
+        Modules
+      </a>
     </div>
   </div>
 </nav>
