--- a/src/app/collections/collections-home/collections-home.component.html
+++ b/src/app/collections/collections-home/collections-home.component.html
@@ -1,33 +1,26 @@
 <app-divider>
   Tab Menu
 </app-divider>
-<div class="container">
-  <div class="tabs is-centered is-boxed">
-    <ul>
-      <li
-        routerLinkActive="is-active"
-        [routerLinkActiveOptions]="{ exact: true }"
-      >
-        <a routerLink="./">
-          <span>Biography</span>
-        </a>
-      </li>
-      <li routerLinkActive="is-active">
-        <a routerLink="companies">
-          <span>Companies</span>
-        </a>
-      </li>
-      <li routerLinkActive="is-active">
-        <a routerLink="partners">
-          <span>Partners</span>
-        </a>
-      </li>
-    </ul>
-  </div>
-  <div class="container">
-    <router-outlet></router-outlet>
-  </div>
-</div>
+<app-tabs>
+  <li routerLinkActive="is-active" [routerLinkActiveOptions]="{ exact: true }">
+    <a routerLink="./">
+      <span>Biography</span>
+    </a>
+  </li>
+  <li routerLinkActive="is-active">
+    <a routerLink="companies">
+      <span class="icon is-small"
+        ><i class="fas fa-image" aria-hidden="true"></i
+      ></span>
+      <span>Companies</span>
+    </a>
+  </li>
+  <li routerLinkActive="is-active">
+    <a routerLink="partners">
+      <span>Partners</span>
+    </a>
+  </li>
+</app-tabs>
 <app-divider>
   Table Component
 </app-divider>
